<resources>
    <string name="app_name">Hemat.com</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="masuk">masuk</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="email">Email</string>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="daftar">Daftar sekarang!</string>
    <string name="selamat_datang">Selamat Datang</string>

    <string-array name="select">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>
</resources>
